Add new routes in openapi.yaml, remove nil forced variation checks, change delete URL to not require a specific variation
